# celeris

./: CMakeLists.txt  gicp_test_clouds.cpp  gicp_test_clouds.h  imgui.ini  imgui_layer.cpp  imgui_layer.h  main.cpp  main_artificial_scan_comparison.cpp  main_scans_messy.cpp  main_server_test.cpp  math_utils.h  path_utils.h  push_constants_structures.h  render_state.h  ros2_lidar_socket_sender.cpp  send_lidar_scan_file.py  send_lidar_scan_video.py  send_socket_test.py  solve_6x6_cpu_dump.txt  transformable.cpp  transformable.h  q
a_star/: a_star.cpp  a_star.h  a_star_structures.h  nonholonomic_a_star.cpp  nonholonomic_a_star.h  occupancy_cell.h  occupancy_grid_3d.cpp  occupancy_grid_3d.h  reeds_shepp.h
a_star_old/: nonholonomic_a_star.h
autopilot/: celeris.cpp  celeris.h  celeris_visualizer.cpp  celeris_visualizer.h  spherical_pose_marker.cpp  spherical_pose_marker.h
camera/: camera.cpp  camera.h
camera/controllers/: fps_camera_controller.cpp  fps_camera_controller.h
icp/: gicp.cpp  gicp.h  gicp_pass.cpp  gicp_pass.h  voxel_map_point_inserter.h  voxel_point_map.cpp  voxel_point_map.h
managers/: compute_pass_manager.cpp  compute_pass_manager.h  manager_bundle.cpp  manager_bundle.h  material_instance_manager.cpp  material_instance_manager.h  material_manager.cpp  material_manager.h  mesh_manager.cpp  mesh_manager.h  shader_manager.cpp  shader_manager.h  texture_manager.cpp  texture_manager.h
opengl/: main_gicp.cpp  main_voxel_map_working.cpp  main_with_error.cpp  point.cpp  point.h  render_state.h  voxel_grid_gpu.h
point_cloud/: normal_cloud_pass.cpp  normal_cloud_pass.h  point_cloud.cpp  point_cloud.h  point_cloud_frame.cpp  point_cloud_video.cpp  point_cloud_video.h
point_cloud/generation/: point_cloud_generator.cpp  point_cloud_generator.h
renderer/: aabb.h  compute_pass_instance.cpp  compute_pass_instance.h  compute_pass_manager.cpp  compute_pass_manager.h  indirect_render_object.cpp  indirect_render_object.h  instance_batch.cpp  instance_batch.h  instance_buffer_view.cpp  instance_buffer_view.h  instanced_render_object.cpp  instanced_render_object.h  material_data_types.h  material_instance_manager.cpp  material_instance_manager.h  material_manager.cpp  material_manager.h  material_structures.h  mesh.cpp  mesh.h  mesh_manager.cpp  mesh_manager.h  mesh_view.cpp  mesh_view.h  pass_instance.cpp  pass_instance.h  pass_object.cpp  pass_object.h  pass_writer.cpp  pass_writer.h  render_object.cpp  render_object.h  renderer.cpp  renderer.h  scene.cpp  scene.h  scene_object.cpp  scene_object.h  shader_manager.cpp  (+11 more)
renderer/lighting_system/: light_source.h  lighting_system.cpp  lighting_system.h
renderer/lines/: line_cloud.cpp  line_cloud.h  line_instance.h
renderer/pbr/: brdf_lut_pass.cpp  brdf_lut_pass.h  equirect_to_cubemap_pass.cpp  equirect_to_cubemap_pass.h  irradiance_map_pass.cpp  irradiance_map_pass.h  pbr_map_generator.cpp  pbr_map_generator.h  pbr_maps.cpp  pbr_maps.h  prefilter_map_pass.cpp  prefilter_map_pass.h
renderer/point_cloud/: point_cloud.cpp  point_cloud.h  point_cloud_mesher.cpp  point_cloud_mesher.h  point_cloud_preprocessor.cpp  point_cloud_preprocessor.h  point_instance.h
renderer/resources/: frame_resources.cpp  frame_resources.h
shaders/: brdf_lut.comp  build_cluster_light_lists.comp  dispatch_adapter.comp  equirect_to_cubemap.comp  fill_buffer.comp  generate_irradiance_map.comp  generate_prefilter_map.comp  gicp_reduce_new.comp  gicp_step.comp  insert_points_into_voxel_map.comp  light_incides_for_clusters.comp  line_cloud.frag  line_cloud.vert  pbr.frag  pbr.vert  point_cloud.frag  point_cloud.vert  skybox.frag  skybox.vert  test_compute_shader.comp  triangle.frag  triangle.vert  triangle_old.vert  triangle_old_2.frag  triangle_old_2.vert  unlit.frag  unlit.vert  voxel.frag  voxel.vert
shaders/cloud_to_mesh/: generate_mesh_cs.comp
shaders/common/: allocator.inc  allocator_old.inc  buffer_structures.comp  buffer_structures.inc  buffer_structures_old.inc  memory_utils.inc  utils.inc  utils_old.inc
shaders/icp/: gicp_step.comp  insert_points_into_voxel_map_old.comp
shaders/normal_cloud/: normal_cloud.frag  normal_cloud.vert
shaders/point_cloud/: normals_from_webots_lidar_point_cloud.comp  remove_near_origin_lidar_points.comp
shaders/voxel_grid/: add_voxel_write_list_counters_together.comp  apply_writes_to_world.comp  build_indirect_cmds.comp  clear_chunk_hash_table.comp  evict_buckets_build.comp  evict_low_priority.comp  evict_low_priority_dispatch_adapter.comp  fill_chunk_hash_table.comp  free_evicted_chunks_mesh.comp  hash_table_conditional_dispatch_adapter.comp  insert_elements_to_voxel_write_list.comp  mark_all_used_chunks_as_dirty.comp  mark_write_chunks_to_generate.comp  mesh_alloc.comp  mesh_count.comp  mesh_emit.comp  mesh_emit.inc  mesh_finalize.comp  mesh_pool_clear.comp  mesh_pool_seed.comp  mesh_reset.comp  read_voxel_grid_chunk.comp  reset_dirty_count.comp  (+14 more)
skybox/: skybox_pass.h
trash/: apply_writes_to_world.comp
voxel_grid_vulkan/: voxel_grid.cpp  voxel_grid.h  voxel_grid_structures.h  voxelizator.cpp  voxelizator.h
vulkan/: compute_pipeline.cpp  compute_pipeline.h  graphics_pipeline.cpp  graphics_pipeline.h  pbr_renderer.cpp  pbr_renderer.h  shader_module.cpp  shader_module.h
vulkan_self/: buffer_filler.cpp  buffer_filler.h  collect_handles_helper.h  formats.h  push_constants_structures.h  shader_stages.h  slot_buffer.h  utils.h  vertex_layout_builder.cpp  vertex_layout_builder.h  vulkan_buffer.cpp  vulkan_buffer.h  vulkan_buffer_view.cpp  vulkan_buffer_view.h  vulkan_command_buffer.cpp  vulkan_command_buffer.h  vulkan_device.cpp  vulkan_device.h  vulkan_engine.cpp  vulkan_engine.h  vulkan_fence.cpp  vulkan_fence.h  vulkan_framebuffer.cpp  vulkan_framebuffer.h  vulkan_image.cpp  vulkan_image.h  vulkan_image_temp.cpp  vulkan_image_temp.h  vulkan_image_view.cpp  vulkan_image_view.h  vulkan_memory.cpp  vulkan_memory.h  vulkan_physical_device.cpp  vulkan_physical_device.h  vulkan_pipeline.cpp  vulkan_pipeline.h  vulkan_pipeline_layout.cpp  vulkan_pipeline_layout.h  vulkan_queue.cpp  vulkan_queue.h  (+13 more)
(+176 files in other folders)
